--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "rx animation scheduler",
   "main": "dist/index.js",
   "scripts": {
-    "prebuild":"rimraf dist",
+    "prebuild": "rimraf dist",
     "build": "babel --copy-files --out-dir dist --ignore *.test.js src",
     "lint": "eslint src",
     "test": "nyc mocha",
-    "watch:test": "mocha --watch",
+    "watch:test": "mocha --compilers js:babel-register --delay --watch",
     "validate": "npm-run-all --parallel test lint build"
   },
   "keywords": [
@@ -19,17 +19,21 @@
   ],
   "author": "James Haley",
   "license": "MIT",
+  "peerDependencies": {
+    "rx": "4.1.0"
+  },
   "devDependencies": {
     "babel-cli": "6.18.0",
+    "babel-plugin-istanbul": "3.0.0",
     "babel-preset-es2015": "6.18.0",
+    "babel-register": "6.18.0",
     "chai": "3.5.0",
     "eslint": "3.11.1",
     "eslint-config-kentcdodds": "11.1.0",
     "mocha": "3.2.0",
     "npm-run-all": "3.1.2",
     "nyc": "10.0.0",
-    "rimraf": "2.5.4",
-    "rx": "4.1.0"
+    "rimraf": "2.5.4"
   },
   "nyc": {
     "check-coverage": "true",
