--- a/package.json
+++ b/package.json
@@ -45,8 +45,16 @@
       "text",
       "lcov"
     ],
+    "extension": [
+      ".es6"
+    ],
     "include": [
       "src"
-    ]
+    ],
+    "require": [
+      "babel-register"
+    ],
+    "sourceMap": false,
+    "instrument": false
   }
 }
