async test working great

--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,11 @@
 	],
 	"env": {
 		"test": {
-			"plugins": ["istanbul"]
+			"plugins": [
+				"istanbul",
+				"syntax-async-functions", 
+				"transform-regenerator"
+			]
 		}
 	}
 }
