--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "babel --copy-files --out-dir dist --ignore *.test.js src",
     "lint": "eslint src",
     "test": "nyc mocha",
-    "watch:test": "mocha --compilers js:babel-register --delay --watch",
+    "watch:test": "mocha --compilers js:babel-register --watch",
     "validate": "npm-run-all --parallel test lint build"
   },
   "keywords": [
@@ -25,6 +25,8 @@
   "devDependencies": {
     "babel-cli": "6.18.0",
     "babel-plugin-istanbul": "3.0.0",
+    "babel-plugin-syntax-async-functions": "6.13.0",
+    "babel-plugin-transform-regenerator": "6.20.0",
     "babel-preset-es2015": "6.18.0",
     "babel-register": "6.18.0",
     "chai": "3.5.0",
