--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "schq",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jamesrhaley/schQ"
+  },
   "description": "rx animation scheduler",
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "babel --copy-files --out-dir dist --ignore *.test.js src",
+    "build":"npm-run-all --parallel build:*",
+    "build:main": "babel --copy-files --out-dir dist --ignore *.test.js src",
+    "build:umd": "webpack --output-filename index.umd.js",
+    "build:umd.min": "webpack --output-filename index.umd.min.js -p",
     "lint": "eslint src",
-    "test": "nyc mocha",
+    "test": "cross-env NODE_ENV=test nyc mocha",
     "watch:test": "mocha --compilers js:babel-register --watch",
     "validate": "npm-run-all --parallel test lint build"
   },
@@ -20,22 +27,22 @@
   "author": "James Haley",
   "license": "MIT",
   "peerDependencies": {
-    "rx": "4.1.0"
+    "rx": "^4.1.0"
   },
   "devDependencies": {
     "babel-cli": "6.18.0",
+    "babel-loader": "6.2.9",
     "babel-plugin-istanbul": "3.0.0",
-    "babel-plugin-syntax-async-functions": "6.13.0",
-    "babel-plugin-transform-regenerator": "6.20.0",
     "babel-preset-es2015": "6.18.0",
     "babel-register": "6.18.0",
     "chai": "3.5.0",
+    "cross-env": "3.1.3",
     "eslint": "3.11.1",
-    "eslint-config-kentcdodds": "11.1.0",
     "mocha": "3.2.0",
     "npm-run-all": "3.1.2",
     "nyc": "10.0.0",
-    "rimraf": "2.5.4"
+    "rimraf": "2.5.4",
+    "webpack": "1.14.0"
   },
   "nyc": {
     "all": true,
