--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   ],
   "author": "James Haley",
   "license": "MIT",
-  "peerDependencies": {
+  "dependencies": {
     "rx": "^4.1.0"
   },
   "devDependencies": {
