--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build":"npm-run-all --parallel build:*",
+    "build": "npm-run-all --parallel build:*",
     "build:main": "babel --copy-files --out-dir dist --ignore *.test.js src",
     "build:umd": "webpack --output-filename index.umd.js",
     "build:umd.min": "webpack --output-filename index.umd.min.js -p",
     "lint": "eslint src",
     "test": "NODE_ENV=test nyc mocha",
     "watch:test": "mocha --compilers js:babel-register --watch",
+    "report-coverage": "cat ./coverage/lcov.info | codecov",
     "validate": "npm-run-all --parallel test lint build"
   },
   "keywords": [
@@ -36,6 +37,7 @@
     "babel-preset-es2015": "6.18.0",
     "babel-register": "6.18.0",
     "chai": "3.5.0",
+    "codecov": "1.0.1",
     "cross-env": "3.1.3",
     "eslint": "3.11.1",
     "mocha": "3.2.0",
