--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "schq",
-  "version": "0.0.1",
+  "version": "0.0.0-semantically-released",
   "repository": {
     "type": "git",
     "url": "https://github.com/jamesrhaley/schQ"
@@ -8,6 +8,7 @@
   "description": "rx animation scheduler",
   "main": "dist/index.js",
   "scripts": {
+    "commit": "git-cz",
     "prebuild": "rimraf dist",
     "build": "npm-run-all --parallel build:*",
     "build:main": "babel --copy-files --out-dir dist --ignore *.test.js src",
@@ -17,6 +18,7 @@
     "test": "NODE_ENV=test nyc mocha",
     "watch:test": "mocha --compilers js:babel-register --watch",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
+    "release": "semantic-release pre && npm publish && semantic-release post",
     "validate": "npm-run-all --parallel test lint build"
   },
   "keywords": [
@@ -38,12 +40,17 @@
     "babel-register": "6.18.0",
     "chai": "3.5.0",
     "codecov": "1.0.1",
+    "commitizen": "2.8.6",
     "cross-env": "3.1.3",
+    "cz-conventional-changelog": "1.2.0",
     "eslint": "3.11.1",
+    "ghooks": "1.3.2",
     "mocha": "3.2.0",
     "npm-run-all": "3.1.2",
     "nyc": "10.0.0",
     "rimraf": "2.5.4",
+    "semantic-release": "6.3.2",
+    "validate-commit-msg": "2.8.2",
     "webpack": "1.14.0"
   },
   "nyc": {
@@ -68,5 +75,15 @@
     "include": [
       "src"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    },
+    "ghooks": {
+      "pre-commit": "npm run validate",
+      "commit-msg": "validate-commit-msg"
+    }
   }
+
 }
