--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,10 @@
 	"presets": [
 		"es2015"
 	],
+
+  	"plugins": [
+  		"transform-async-to-generator"
+  	],
 	"env": {
 		"test": {
 			"plugins": [
