--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "description": "rx animation scheduler",
   "main": "dist/index.js",
   "scripts": {
-    "commit": "git-cz",
     "prebuild": "rimraf dist",
     "build": "npm-run-all --parallel build:*",
     "build:main": "babel --copy-files --out-dir dist --ignore *.test.js src",
@@ -36,6 +35,7 @@
     "babel-cli": "6.18.0",
     "babel-loader": "6.2.9",
     "babel-plugin-istanbul": "3.0.0",
+    "babel-plugin-transform-async-to-generator": "6.16.0",
     "babel-preset-es2015": "6.18.0",
     "babel-register": "6.18.0",
     "chai": "3.5.0",
@@ -75,15 +75,5 @@
     "include": [
       "src"
     ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    },
-    "ghooks": {
-      "pre-commit": "npm run validate",
-      "commit-msg": "validate-commit-msg"
-    }
   }
-
 }
